--- a/deleteRepos.ipynb
+++ b/deleteRepos.ipynb
@@ -7,8 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GITHUB_TOKEN = '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'\n",
-    "USERNAME = 'AhmedEsmail91'"
+    "GITHUB_TOKEN = 'add_your_classic_token_here'  # Replace with your GitHub token\n",
+    "USERNAME = 'add_your_username_here'  # Replace with your GitHub username"
    ]
   },
   {
